Translation of Moodle 1.2dev .

--- a/lang/pl/help/forum/ratings.html
+++ b/lang/pl/help/forum/ratings.html
@@ -1,41 +1,27 @@
-<P ALIGN=CENTER><B>Oceny uczestników forum</B></P>
+Poszczególne posty mo¿na oceniaæ przy pomocy skali opartej na teorii <strong> odrêbnego poznania i powi±zanego poznania</strong>.
 
-<P>Poszczególne posty mo¿na oceniaæ przy pomocy skali opartej na teorii <strong> odrêbnego poznania i powi±zanego poznania</strong>.</P>
+Teoria ta mo¿e pomóc na nowo spojrzeæ na stosunki miêdzyludzkie. Opisuje dwa ró¿ne sposoby uczenia siê i oceniania tego co widzimy i s³yszymy.
 
-<p>Teoria ta mo¿e pomóc na nowo spojrzeæ na interakcje miêdzyludzkie. Opisuje dwa ró¿ne sposoby uczenia siê i oceniania tego co widzimy i s³yszymy.</P>  
-
-<p> Mimo, i¿ ka¿dy z nas mo¿e wykorzystywaæ te dwie metody w ró¿nym stopniu w ró¿nym
-czasie, warto wyobraziæ sobie dwie przyk³adowe osoby. Jedna z nich jest pos³uguje siê g³ównie odrêbnym poznaniem (Ja¶), a druga g³ównie poznaniem powi±zanym (Ma³gosia).</p>
+Mimo, i¿ ka¿dy z nas mo¿e wykorzystywaæ te dwie metody w ró¿nym stopniu w ró¿nych sytuacjach, warto wyobraziæ sobie dwie przyk³adowe osoby. Jedna z nich jest pos³uguje siê g³ównie odrêbnym poznaniem (Ja¶), a druga g³ównie poznaniem powi±zanym (Ma³gosia).
 <ul>
   <li>Ja¶ chce zachowywaæ "obiektywizm" w najwiêkszym mo¿liwym stopniu, nie anga¿uj±c swych uczuæ
-ani emocji. W dyskusji z innymi lud¼mi, którzy maj± odmienne zdania, Ja¶ woli broniæ swych racji u¿ywaj±c logiki do znajdywania luk w racjach przedstawianych przez przeciwników. Do nowych pogl±dów podchodzi krytycznie, chyba, ¿e s± one faktami popartymi przez ciesz±ce siê dobr± opini± ¼ród³a takie jak ksi±¿ki, szanowani nauczyciele, lub w³asne 
-bezpo¶rednie 
-do¶wiadczenie. Ja¶ w du¿ym stopniu pos³uguje siê <strong>poznaniem odrêbnym</strong>.<br><br>
+ani emocji. W dyskusji z lud¼mi, którzy maj± odmienne zdanie, Ja¶ woli broniæ swych racji u¿ywaj±c logiki do znajdywania luk w racjach przedstawianych przez rozmówców. Do nowych pogl±dów podchodzi krytycznie, chyba, ¿e s± one faktami popartymi przez ciesz±ce siê dobr± opini± ¼ród³a takie jak ksi±¿ki, szanowani nauczyciele, lub w³asne bezpo¶rednie do¶wiadczenie. Ja¶ w du¿ym stopniu pos³uguje siê <strong>poznaniem odrêbnym</strong>.
   </li>
-  <li>Ma³gosia jest bardziej wra¿liwa na ludzi. Ma rozwiniêt± empatiê i 
-czêsto 
-	s³ucha innych oraz zadaje im pytania tak d³ugo a¿ ma wra¿enie, ¿e potrafi powi±zaæ i &quot;zrozumieæ 
-	sprawy z ich punktu widzenia&quot;. Uczy siê poprzez wymianê 
-do¶wiadczeñ,
-	które zaowocowa³y zdobyciem wiedzy u innych osób. W rozmowach z innymi unika konfrontacji i czêsto, je¶li znajdzie sposób, stara siê pomagaæ drugiej osobie, sugeruj±c logiczne rozwi±zania. Ma³gosia w bardzo du¿ym stopniu wykorzystuje  
-<strong>poznanie 
-    powi±zane</strong>.</li>
+  <li>Ma³gosia jest bardziej wra¿liwa na ludzi. Ma rozwiniêt± empatiê i czêsto 	s³ucha innych oraz zadaje im pytania tak d³ugo a¿ ma wra¿enie, ¿e potrafi powi±zaæ i &quot;zrozumieæ sprawy z ich punktu widzenia&quot;. Uczy siê poprzez wymianê do¶wiadczeñ, które zaowocowa³y zdobyciem wiedzy u innych osób. W rozmowach unika konfrontacji i czêsto, je¶li znajdzie sposób, stara siê pomagaæ drugiej osobie, sugeruj±c logiczne rozwi±zania. Ma³gosia w bardzo du¿ym stopniu wykorzystuje <strong>poznanie powi±zane</strong>.</li>
 </ul>
-<p>Czy w powy¿szych przyk³adach zauwa¿y³e¶, ¿e poznaniem odrêbnym pos³uguje siê mê¿czyzna, a 
-powi±zanym kobieta? Niektóre badania wykazuj±, ¿e statystycznie jest to pewna prawid³owo¶æ, choæ poszczególne osoby mog± plasowaæ siê w dowolnym miejscu pomiêdzy tymi dwoma skrajno¶ciami.</p>
-<p>Dla wspó³pracuj±cej i efektywnej grupy ucz±cych siê najlepiej by³oby gdyby wszyscy
-mogli stosowaæ OBA sposoby poznania.</p>
-<p>W szczególnej sytuacji, tak jak na forum on-line pojedynczy post danej osoby mo¿e ujawniaæ jedn± z tych dwóch cech lub nawet obie. Osoba, która 
-ogólnie 
-pos³uguje siê poznaniem powi±zanym mo¿e wysy³aæ sygna³ typowy dla poznania odrêbnego i odwrotnie. Celem oceny ka¿dego postu przy pomocy tej skali jest:</p>
+
+Czy w powy¿szych przyk³adach zauwa¿y³e¶, ¿e poznaniem odrêbnym pos³uguje siê mê¿czyzna, a powi±zanym kobieta? Niektóre badania wykazuj±, ¿e statystycznie jest to pewna prawid³owo¶æ, choæ poszczególne osoby mog± plasowaæ siê w dowolnym miejscu pomiêdzy tymi dwoma skrajno¶ciami.
+
+Dla wspó³pracuj±cej i efektywnej grupy ucz±cych siê najlepiej by³oby gdyby wszyscy mogli stosowaæ OBA sposoby poznania.
+
+W szczególnej sytuacji, tak jak na forum on-line pojedynczy post danej osoby mo¿e ujawniaæ jedn± z tych dwóch cech lub nawet obie. Osoba, która ogólnie pos³uguje siê poznaniem powi±zanym mo¿e wysy³aæ sygna³ typowy dla poznania odrêbnego i odwrotnie. Celem oceny ka¿dego postu przy pomocy tej skali jest:</p>
 <blockquote>
-  <p>a) pomóc Tobie w zastanawianiu siê nad tymi kwestiami w trakcie czytania innych postów<br>
-    b) przedstawiæ ka¿demu autorowi opinie na temat tego, jak postrzegani s± przez innych</p>
+a) pomóc Tobie w zastanawianiu siê nad opisanymi tu  kwestiami w trakcie czytania postów
+b) przedstawiæ ka¿demu autorowi opinie na temat tego, jak postrzegani s± przez innych
 </blockquote>
-<p>Wyników nie stosuje siê do oceny studentów, lecz do usprawnienia komunikacji i procesu uczenia siê.</p>
+Wyników nie stosuje siê do oceny studentów, lecz do usprawnienia komunikacji i procesu uczenia siê.
 <hr>
-<p><br>
-  Je¶li jeste¶ zainteresowany bardziej szczegó³owymi informacjami, odsy³amy do publikacji autorów tych koncepcji:</p>
+Je¶li jeste¶ zainteresowany bardziej szczegó³owymi informacjami, odsy³amy do publikacji autorów tych koncepcji:
 <ul>
   <li>Belenky, M.F., Clinchy, B.M., Goldberger, N.R., &amp; Tarule, J.M. (1986). 
     Women's ways of knowing: the development of self, voice, and mind. New York, 
