--- a/mod/quiz/randomsamatch.html
+++ b/mod/quiz/randomsamatch.html
@@ -20,25 +20,48 @@
         <?php  if (isset($err["name"])) formerr($err["name"]); ?>
     </TD>
 </TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("introduction", "quiz") ?>:</B></P></TD>
-    <TD>
+<tr valign=top>
+    <td align=right><p><b><?php  print_string("introduction", "quiz") ?>:</b></p></td>
+    <br />
+    <br />
+    <br />
+    <p><font SIZE="1">
+    <?php
+           if ($usehtmleditor) {
+               helpbutton("richtext", get_string("helprichtext"), "moodle", true, true);
+           } else {
+               helpbutton("text", get_string("helptext"), "moodle", true, true);
+           }
+    ?>
+    </font></p>
+    </td>
+    <td>
         <?php  if (isset($err["questiontext"])) {
                formerr($err["questiontext"]); 
-               echo "<BR />";
+               echo "<br />";
            }
+
            if (empty($question->questiontext)) {
                $question->questiontext =  get_string("randomsamatchintro", "quiz");
            }
            print_textarea($usehtmleditor, 15, 60, 630, 300, "questiontext", $question->questiontext);
-           if ($usehtmleditor) {
-               helpbutton("richtext", get_string("helprichtext"), "moodle");
+
+           if ($usehtmleditor) {   /// Trying this out for a while
+               echo '<input type="hidden" name="questiontextformat" value="'.FORMAT_HTML.'">';
            } else {
-               helpbutton("text", get_string("helptext"), "moodle");
+               echo "<div align=right>";
+               print_string("formattexttype");
+               echo ":&nbsp;";
+               if (!$question->questiontextformat) {
+                   $question->questiontextformat = FORMAT_MOODLE;
+               }
+               choose_from_menu(format_text_menu(), "questiontextformat", $question->questiontextformat, "");
+               helpbutton("textformat", get_string("helpformatting"));
+               echo "</div>";
            }
         ?>
-    </TD>
-</TR>
+    </td>
+</tr>
 <TR valign=top>
     <TD align=right><P><B><?php  print_string("randomsamatchnumber", "quiz") ?>:</B></P></TD>
     <TD>
