Tiny formatting fix

--- a/course/groups-summary.html
+++ b/course/groups-summary.html
@@ -3,7 +3,7 @@
    <th colspan="2"><?php echo $t->name ?></th>
  </tr>
  <tr><td class="generalboxcontent" bgcolor="<?php echo $THEME->cellcontent ?>">
-   <table>
+   <table width="100%">
      <tr>
       <td valign="top" width="120">
         <p><?php echo $t->picture ?></p>
