FIxed a dodgy image

--- a/lang/fr/help/quiz/multianswer.html
+++ b/lang/fr/help/quiz/multianswer.html
@@ -53,8 +53,8 @@ b) Quelle note d&eacute;sirez-vous? {3:NUMERICAL:=3:2}</textarea>
               d&eacute;cimal <input size="8" type="text" value="" name="q4ma3">.<br /><br />
               Notez que les adresses URL comme <a target="newpage"
               href="http://www.moodle.org">www.moodle.org</a> et les
-              binettes <img src="http://server.dougiamas.net/moodle/pix/s/smiley.gif"
-              height="15" width="15" alt=":-)"> sont correctement interpr&eacute;t&eacute;es:<br />
+              binettes  :-)
+              sont correctement interpr&eacute;t&eacute;es:<br />
               a) Est-ce bien?
               <select name="q4ma4">
               <option></option>
