--- a/lang/sv/help/quiz/multianswer.html
+++ b/lang/sv/help/quiz/multianswer.html
@@ -40,7 +40,7 @@ Det h&auml;r exemplet kommer att visas f&ouml;r studenterna/eleverna/deltagarna/
 <table align="center" width="90%" class="generalbox" border="0" cellpadding="5" cellspacing="0"><tr><td bgcolor="#FFFFFF" class="generalboxcontent"><table width="100%" cellspacing="10"><tr><td nowrap width="100" valign="top"><p align="center"><b>3</b></p><p align="center"><font size="1">8 Betyg</font></p><img height="1" width="100" src="pix/spacer.gif" alt="" /><br />
 </td><td valign="top"><p>Den h&auml;r fr&aring;gan best&aring;r av lite text med ett svar &auml;r inb&auml;ddat precis h&auml;r  <select   name="q4ma1" ><option></option><option value="4" >Felaktigt svar</option><option value="5" >Ett annat felaktigt svar</option><option value="6" >Korrekt svar</option><option value="7" >Svar som ger 50% r&auml;tt</option></select>  och omedelbart efter det s&aring; m&aring;ste Du ta itu med det h&auml;r kortsvaret  <input   name="q4ma2"  value="" type="TEXT" size="8"/>  och slutligen har vi ett flyttal  <input   name="q4ma3"  value="" type="TEXT" size="8"/> .<br />
 <br />
-L&auml;gg m&auml;rke till att adresser som <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> och smilies <img alt=":-)" width="15" height="15" src="http://server.dougiamas.net/moodle/pix/s/smiley.gif" /> fungerar som vanligt:<br />
+L&auml;gg m&auml;rke till att adresser som <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> och smilies :-) fungerar som vanligt:<br />
 a) Hur bra &auml;r det h&auml;r?  <select   name="q4ma4" ><option></option><option value="13" >Ja</option><option value="14" >Nej</option></select> <br />
 b) Vilket betyg/omd&ouml;me skulle Du ge det?  <input   name="q4ma5"  value="" type="TEXT" size="8"/> <br />
 <br />
