--- a/lang/el/help/quiz/multianswer.html
+++ b/lang/el/help/quiz/multianswer.html
@@ -30,7 +30,7 @@
 <table align="CENTER" width="90%" class="generalbox" border="0" cellpadding="5" cellspacing="0"><tr><td bgcolor="#FFFFFF" class="generalboxcontent"><table width=100% cellspacing=10><tr><td nowrap width=100 valign=top><p align=center><b>3</b></p><p align=center><font size=1>8 Marks</font></p><img height="1" width="100" src="pix/spacer.gif" alt=""><br />
 </td><td valign=top><p>Αυτή η ερώτηση αποτελείται από κάποιο κείμενο και η απάντηση είναι ενσωματωμένη εδώ  <select   name="q4ma1" ><option></option><option value="4" >Λάθος απάντηση</option><option value="5" >Άλλη μια λάθος απάντηση</option><option value="6" >Σωστή απάντηση</option><option value="7" >Απάντηση που δίνει το 50%</option></select>  και αμέσως μετά απ' αυτό έχεις μια μικρή απάντηση <input   name="q4ma2"  value="" type="TEXT" size="8"/>  και τέλος έχουμε έναν αριθμό κινητής υποδιαστολής  <input   name="q4ma3"  value="" type="TEXT" size="8"/> .<br />
 <br />
-Σημείωσε ότι διευθύνσεις όπως το <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> και τα χαμόγελα <img alt=":-)" width=15 height=15 src="http://server.dougiamas.net/moodle/pix/s/smiley.gif"> λειτουργούν όπως συνήθως:<br />
+Σημείωσε ότι διευθύνσεις όπως το <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> και τα χαμόγελα  λειτουργούν όπως συνήθως:<br />
 a) Πόσο καλό είναι αυτό;<select   name="q4ma4" ><option></option><option value="13" >Ναι</option><option value="14" >Όχι</option></select> <br />
 b) Τι βαθμό θα του έδινες; <input   name="q4ma5"  value="" type="TEXT" size="8"/> <br />
 <br />
