Better smiley fix

--- a/lang/fr/help/quiz/multianswer.html
+++ b/lang/fr/help/quiz/multianswer.html
@@ -53,7 +53,7 @@ b) Quelle note d&eacute;sirez-vous? {3:NUMERICAL:=3:2}</textarea>
               d&eacute;cimal <input size="8" type="text" value="" name="q4ma3">.<br /><br />
               Notez que les adresses URL comme <a target="newpage"
               href="http://www.moodle.org">www.moodle.org</a> et les
-              binettes  :-)
+              binettes  <img border="0" src="pix/s/smiley.gif" width="15" height="15">
               sont correctement interpr&eacute;t&eacute;es:<br />
               a) Est-ce bien?
               <select name="q4ma4">
