--- a/lang/no/help/quiz/multianswer.html
+++ b/lang/no/help/quiz/multianswer.html
@@ -45,7 +45,7 @@ Lykke til!
           numerisk spørsmål <input size="8" name="q4ma3"> .<br>
           <br>
           Legg merke til at adresser som <a href="http://www.moodle.org">
-          www.moodle.org</a> og smilefjes :-)&nbsp; fungerer som vanlig:&nbsp;
+          www.moodle.org</a> og smilefjes <img border="0" src="pix/s/smiley.gif" width="15" height="15">&nbsp; fungerer som vanlig:&nbsp;
           :-)<br>
           a) Hvor bra er dette? <select name="q4ma4">
           <option selected></option>
