--- a/lang/pl/help/quiz/multianswer.html
+++ b/lang/pl/help/quiz/multianswer.html
@@ -33,7 +33,7 @@ Powodzenia!
 <table align="CENTER" width="90%" class="generalbox" border="0" cellpadding="5" cellspacing="0"><tr><td bgcolor="#FFFFFF" class="generalboxcontent"><table width=100% cellspacing=10><tr><td nowrap width=100 valign=top><p align=center><b>3</b></p><p align=center><font size=1>8 Marks</font></p><img height="1" width="100" src="pix/spacer.gif" alt=""><br />
 </td><td valign=top><p>To pytanie zawiera nieco tekstu z pytaniami za³±czonymi w³a¶nie tutaj  <select   name="q4ma1" ><option></option><option value="4" >B³êdna odpowied¼</option><option value="5" >Inna b³êdna odpowied¼</option><option value="6" >Poprawna odpowied¼</option><option value="7" >Odpowied¼ daj±ca po³owê punktów</option></select> , po czym nale¿y poradziæ sobie z pytaniem do krótkiej odpowiedzi <input   name="q4ma2"  value="" type="TEXT" size="8"/>  i ostatecznie mamy pytanie numeryczne  <input   name="q4ma3"  value="" type="TEXT" size="8"/> .<br />
 <br />
-Zauwa¿, ¿e adresy, takie jak <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> i emotikony :-) dzia³±j± tak jak normalnie:<br />
+Zauwa¿, ¿e adresy, takie jak <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> i emotikony <img border="0" src="pix/s/smiley.gif" width="15" height="15"> dzia³±j± tak jak normalnie:<br />
 a) Czy podoba Ci siê to?  <select   name="q4ma4" ><option></option><option value="13" >Tak</option><option value="14" >Nie</option></select> <br />
 b) Jak± ocenê by¶ za to przyzna³?  <input   name="q4ma5"  value="" type="TEXT" size="8"/> <br />
 <br />
