--- a/lang/ca/help/quiz/multianswer.html
+++ b/lang/ca/help/quiz/multianswer.html
@@ -49,7 +49,7 @@ Bona sort!
                 .<br />
                 <br />
                 Fixeu-vos que les adreces com ara www.moodle.org i les emoticones 
-                :-)
+                <img border="0" src="pix/s/smiley.gif" width="15" height="15">
                 funcionen com de costum:<br />
                 a) T'agrada? 
                 <select   name="q4ma4" >
