--- a/lang/nl/help/quiz/multianswer.html
+++ b/lang/nl/help/quiz/multianswer.html
@@ -31,7 +31,7 @@ Veel succes!
 </td><td valign=top><p>Dit is een vraag die bestaat uit wat tekst met het antwoord op deze plaats ingebed  <select   name="q4ma1" ><option></option><option value="4" >Fout antwoord</option><option value="5" >Nog een fout antwoord</option><option value="6" >Juist antwoord</option><option value="7" >Antwoord dat de helft van de punten oplevert</option></select>  en onmiddellijk daarna krijg je deze Kort Antwoordvraag  <input   name="q4ma2"  value="" type="TEXT" size="8"/>  en uiteindelijk krijgen we een kommagetal  <input   name="q4ma3"  value="" type="TEXT" size="8"/> .<br />
 <br />
 Merk op dat addressen zoals <a href="http://www.moodle.org" target="newpage">www.moodle.org</a> en smileys 
-:-) normaal werken:<br />
+<img border="0" src="pix/s/smiley.gif" width="15" height="15"> normaal werken:<br />
 a) Hoe goed is dit?  <select   name="q4ma4" ><option></option><option value="13" >Ja</option><option value="14" >Nee</option></select> <br />
 b) Welk cijfer zou je er voor geven?  <input   name="q4ma5"  value="" type="TEXT" size="8"/> <br />
 <br />
