Some important changes:     - Now course events are supported in backup & restore.         - in manual backups         - in scheduled backups     - Fixed important bug when restoring groups.     - Added support to the "user change password" action       (with some changes done in login/change_password.php)
Please, test it !!!!

--- a/backup/backup_execute.html
+++ b/backup/backup_execute.html
@@ -220,6 +220,14 @@
             }
         }
 
+        //Print events info
+        if ($status) { 
+            echo "<li>".get_string("writingeventsinfo");
+            if (!$status = backup_events_info($backup_file,$preferences)) {
+                notify("An error occurred while backing up events");
+            }
+        }
+
         //Module info, this unique function makes all the work!!
         //db export and module fileis copy
         if ($status) {
