--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -10,8 +10,8 @@
 <p>GIFT is the most comprehensive import format available for importing 
    Moodle quiz questions from a text file.  It was designed to be an easy 
    method for teachers writing questions as a text file. It supports Multiple-Choice, 
-   True-False, Short Answer and Numerical questions, as well as insertion 
-   of a _____ for the Missing word format.  Various question-types can be 
+   True-False, Short Answer, Matching and Numerical questions, as well as insertion 
+   of a _____ for the "missing word" format.  Various question-types can be 
    mixed in a single text file, and the format also supports line comments, question names, 
    feedback and percentage-weight grades.  Below are some examples:</p>
 <pre>
@@ -23,7 +23,7 @@ Grant is buried in Grant's tomb.{FALSE}
 
 Who's buried in Grant's tomb?{=no one =nobody}
 
-When was Ulysses S. Grant born?{#1822:1}
+When was Ulysses S. Grant born?{#1822}
 </pre>
 
 <p align=right><a href="help.php?file=formatgift.html&module=quiz">More info about the "GIFT" format</a></p>
