WHoops, forgot a bit

--- a/admin/filters.html
+++ b/admin/filters.html
@@ -106,7 +106,7 @@
        $options[30]    = get_string('numseconds', '',  30);
        $options[0]     = get_string('no');
 
-       choose_from_menu ($options, "cachetext", $config->cachetext, "", "", "");
+       choose_from_menu ($options, "cachetext", $CFG->cachetext, "", "", "");
     ?>
     </td>
     <td>
