--- a/lang/nl/help/exercise/managing.html
+++ b/lang/nl/help/exercise/managing.html
@@ -1,28 +1,28 @@
-<P ALIGN=CENTER><B>Managing an Exercise Assignment</B></P>
+<P ALIGN=CENTER><B>Beheer van de Oefening</B></P>
 <P> Een oefening is iets meer complex dan een gewone opdracht. Ze gebeurt in vier stappen. Deze zijn
 <OL>
 <LI><p><b>Opstarten van de oefening </b> Het beoordelen van de taak die in de oefening gemaakt moet worden,
-wordt gemakkelijker als het opgedeeld wordt in een aantal beoordelingselementen. Die maken het geven van cijfers
+wordt gemakkelijker als ze opgedeeld wordt in een aantal beoordelingselementen. Die maken het geven van cijfers
 minder arbitrair en geven de leerlingen een raamwerk over hoe ze de beoordeling moeten doen.
 Het is de taak van de leraar om de beoordelingselementen op te stellen en zo een evaluatieformulier te maken. 
 (kijk op die pagina voor meer details).</p>
 	
 	<P>Als de beoordelingselementen klaar zijn, kan de leraar een Word-document of een HTML-bestand
-waarin de beschrijing van de taak voor de leerlingen staat, inzenden. Dit bestand wordt aan de leerlingen 
+waarin de beschrijving van de taak voor de leerlingen staat, inzenden. Dit bestand wordt aan de leerlingen 
 getoond in de tweede fase van de oefening.</p>
 	
 	<p>Leraars kunnen, als ze dat zouden willen, een setje gelijkaardige opdrachten maken en ook, als Word of
-Html-bestand, uploaden naar de oefening. Merk op dat deze oefenigen er erg gelijkaardig moeten zijn omdat 
+Html-bestand, uploaden naar de oefening. Merk op dat deze oefeningen er erg gelijkaardig moeten zijn omdat 
 hetzelfde evaluatieformulier voor al deze varianten gebruikt wordt. Het inzenden van een setje opdrachten is 
 een optie en kan voor sommige opdrachten geen geschikte methode zijn.</P>
 	
 <LI><p><b>Leerlingen laten inzenden en beoordelen</b> De opdracht staat nu open voor leerlingen. Als de leraar
-meerdere setjes taken heeft geplaatst, dan zien de leerlingen elk andere taken, anders krijgen allen leerlingen
+meerdere setjes taken heeft geplaatst, dan zien de leerlingen elk andere taken, anders krijgen alle leerlingen
 dezelfde taak.</p>
 
 <p>Voor de leerlingen hun werk kunnen inzenden, moeten zij hun beoordelingsformulier invullen. Wanneer ze hun
-beoordelingsformulier afgewerkt hebben, dan krijgen zij hun uploadformulier te zien. De leerlingen kunnen
-hun taak herwerken in het licht van hun zelfbeoordeling. De leraar ziet de zelfbeoordeling van de leerlingen
+beoordelingsformulier afgewerkt hebben, dan krijgen zij pas het uploadformulier te zien. De leerlingen kunnen
+hun taak herwerken in het licht van hun zelfevaluatie. De leraar ziet de zelfevaluatie van de leerlingen
 en krijgt een leeg beoordelingsformulier om zerlf het werk van de leerling te beoordelen. Dit is een &quot;
 dubbel beoordelingsformulier&quot;. Onderaan dit formulier kan de leraar de leerling vragen zijn werk 
 opnieuw in te zenden of niet.
@@ -31,11 +31,11 @@ opnieuw in te zenden of niet.
 optie, opnieuw inzenden of niet, geeft de leraar controle over deze cyclus van herinzending en beoordeling.
 Als leerlingen meerdere taken mogen inzenden, dan moet de leraar beslissen of het eindcijfer zal bestaan uit het gemiddelde
 van alle inzending van de leerling of uit het hoogst behaalde cijfer. Deze optie kan op elk moment tijdens de
-oefening in of uitgeschakeld worden. Het effecht is onmiddellijk zichtbaar in het cijferoverzicht.</p>
+oefening in of uitgeschakeld worden. Het effect is onmiddellijk zichtbaar in het cijferoverzicht.</p>
 	
 <LI><p><b>Stoppen van het inzenden en beoordelen door leerlingen</b> Na de deadline zet de leraar de oefeing in
 deze fase om het inzenden van taken en beoordelingen te stoppen. De leraar moet alle openstaande taken en 
-inzendingen beoordelen voor de oefening in de laatste fase gezet wordt.
+inzendingen beoordelen voor de oefening in de laatste fase gezet wordt.</p>
 
 <li><p><b>Toon de overzichtcijfers en de scoretabel</b> In deze laatste fase van de oefening, kunnen de leerlingen
 hun &quot;eind&quot;cijfers. In elke fase van de oefening (behalve de eerste) staan de cijfers zichtbaar voor de 
