--- a/lang/nl/help/uploadusers.html
+++ b/lang/nl/help/uploadusers.html
@@ -15,8 +15,10 @@
 </p>
       <p><strong>Standaard veldnamen:</strong> deze zijn optioneel - als ze niet bijgevoegd worden, dan worden de waarden van de allereerste beheerder</p>
       <p><font color="#990000" face="Courier New, Courier, mono">institution, department, city, country, lang, timezone</font> </p>
-      <p><strong>Optionele veldnamen: </strong>deze zijn allemaal volledig optioneel. De <i>course names</i> are the &quot;verkorte namen&quot; van de vakken - als ze opgegeven worden, dan zal de gebruiker lid worden van die vakken</p>
-      <p> <font color="#990000" face="Courier New, Courier, mono">idnumber, icq, phone1, phone2, address, url, description, mailformat, maildisplay, htmleditor, autosubscribe, course1, course2, course3, course4, course5</font></p>
+      <p><strong>Optionele veldnamen: </strong>deze zijn allemaal volledig optioneel. De <i>course names</i> are the &quot;verkorte namen&quot; van de vakken - als ze opgegeven worden, dan zal de gebruiker lid worden van die vakken.  Groepnamen moeten geassocieerd worden bij het overeenstemmende vak, bv. group1 bij course1, enz.
+</p>
+      <p> <font color="#990000" face="Courier New, Courier, mono">idnumber, icq, phone1, phone2, address, url, description, mailformat, maildisplay, htmleditor, autosubscribe, course1, course2, course3, course4, course5,  group1, group2, group3, group4, group5.
+</font></p>
     </blockquote>
     </li>
   <li>Komma's in de gegevens mag je als , noteren. Het script zal automatisch de komma juist terugplaatsen. 
