--- a/lang/nl/help/groupmode.html
+++ b/lang/nl/help/groupmode.html
@@ -15,7 +15,7 @@
    <dd>De groupsmodus die op het niveau van het vak wordt ingesteld, wordt de standaardinstelling voor alle activiteiten
 	die in het vak worden aangemaakt<br /><br /></dd>
    <dt><b>2. Op niveau van de activiteit</b></dt>
-   <dd>Elke activitei dat groepen ondersteund kan zijn eigen groepsmodus krijgen. Als het vak wordt ingesteld op 
+   <dd>Elke activiteit die groepen ondersteunt kan zijn eigen groepsmodus krijgen. Als het vak wordt ingesteld op 
 	 "<a href="help.php?module=moodle&file=groupmodeforce.html">Verplicht groepsmodus</a>" dan wordt de instelling
 	op activeitsniveau genegeerd.</dd>
 </dl>
