--- a/lang/en/help/quiz/formatgift.html
+++ b/lang/en/help/quiz/formatgift.html
@@ -171,13 +171,35 @@
           ~%-50%No one
           ~%50%Grant
           ~%50%Grant's wife
-          ~%-50%Grant's father }</pre><p><u>Special Characters ~ = { } :</u><br>    These symbols <b> ~ = { } </b> control the operation of this filter and cannot be used as normal text within questions.     Since these symbols have a special role in determining the operation of this filter, they are called "control characters."    But sometimes you may want to use one of these characters, for example to show a mathematical formula in a question.     The way to get around this problem is by using "HTML entities."     HTML entities (also called HTML escape sequences) allow you to display characters in HTML without actually using them.    For example, the code <u>&amp;#061;</u> will display as an equal sign (=) in a web browser as HTML.     This allows the characters to be <i>displayed</i> in questions or answers without actually using them.     For example:</p>    <pre>    Which answer equals 5? {          ~&amp;#061; 2 + 2          =&amp;#061; 2 + 3          ~&amp;#061; 2 + 4  }</pre>    <p>The answers in this example will display as <u>= 2 + 2</u>, <u>= 2 + 3</u> and <u>= 2 + 4</u>.    This technique can also be used to display HTML code as code.    The following list shows the HTML code needed to represent each control character.</p>    <pre>     SYMBOL   HTML CODE
-       ~        &amp;#126;
-       =        &amp;#061;
-       {        &amp;#123;
-       }        &amp;#125;
-       &lt;        &amp;lt;
-       &gt;        &amp;gt;</pre>
+          ~%-50%Grant's father }</pre>
+
+<p><u>Special Characters ~ = # { } :</u><br />
+    These symbols <b> ~ = # { } </b> control the operation of this filter and cannot be used as normal text within questions.
+    Since these symbols have a special role in determining the operation of this filter, they are called "control characters."
+    But sometimes you may want to use one of these characters, for example to show a mathematical formula in a question. 
+    The way to get around this problem is "escaping" the control characters. 
+    This means simply putting a backslash (\) before a control character so the filter will know that you want to use
+    it as a literal character instead of as a control character.
+    For example:</p>
+    <pre>     Which answer equals 5? {
+          ~ \= 2 + 2
+          = \= 2 + 3
+          ~ \= 2 + 4  }
+
+     ::GIFT Control Characters::
+     Which of the following is NOT a control character for the GIFT import format? {
+        ~ \~     # \~ is a control character.
+        ~ \=     # \= is a control character.
+        ~ \#     # \# is a control character.
+        ~ \{     # \{ is a control character.
+        ~ \}     # \} is a control character.
+        = \\     # Correct! \\ (backslash) is not a control character. BUT,
+                   it is used to escape the control characters. So, to specify
+                   a literal backslash, you must escape it with a backslash
+                   (as shown in this example).
+     }</pre>
+    <p>When the question is processed, the backslash is removed and is not saved in Moodle.</p>
+
 <p><u>Other Options:</u><br />
     Short Answer questions can be made case sensitive by changing &quot;0&quot; to &quot;1&quot; in the following line:<br />
     <tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
@@ -190,4 +212,4 @@
     Paul Tsuchido Shew wrote this filter in December 2003 incorporating community suggestions for a more robust question format. 
     The name was conceived as an acronym for  &quot;General Import Format Technology&quot; or something like that, 
     but it's too long for a simple filter like this, so it just GIFT.</p>
-    <p><font size="-1">GIFT filter and documentation by Paul Tsuchido Shew http://ac.shew.jp. Last updated 21 Feb 2004.</font></p>
+    <p><font size="-1">GIFT filter and documentation by Paul Tsuchido Shew http://ac.shew.jp. Last updated 27 Feb 2004.</font></p>
