--- a/lang/en/help/quiz/formatgift.html
+++ b/lang/en/help/quiz/formatgift.html
@@ -193,10 +193,8 @@
         ~ \#     # \# is a control character.
         ~ \{     # \{ is a control character.
         ~ \}     # \} is a control character.
-        = \\     # Correct! \\ (backslash) is not a control character. BUT,
-                   it is used to escape the control characters. So, to specify
-                   a literal backslash, you must escape it with a backslash
-                   (as shown in this example).
+        = \     # Correct! \ (backslash) is not a control character. BUT,
+                   it is used to escape the control characters.
      }</pre>
     <p>When the question is processed, the backslash is removed and is not saved in Moodle.</p>
 
