--- a/lang/nl/help/lesson/maxattempts.html
+++ b/lang/nl/help/lesson/maxattempts.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Maximum aantal pogngen (door een leerling)</b></p>
+<p align="center"><b>Maximum aantal pogingen (door een leerling)</b></p>
 
 <p>Deze waarde bepaalt het maximum aantal pogingen dat een leerling mag doen om <b>gelijk welke</b> vraag in de les te beantwoorden. Voor vragen waarin geen mogelijke antwoorden voorgesteld worden, zoals kort antwoordvragen of numerieke vragen, heeft deze instelling een <i>ontsnappingsroute</i> naar de volgende pagina in de les.</p>
 
