New versions for Moodle 1.2

--- a/lang/pl/help/exercise/elements.html
+++ b/lang/pl/help/exercise/elements.html
@@ -1,7 +1,6 @@
-<P ALIGN=CENTER><B>Assignment Elements</B></P>
+<P ALIGN=CENTER><B>Elementy pracy</B></P>
 
-<P>For ease of grading, a Workshop Assignment should have a reasonable 
-	number of &quot;Assessment Elements&quot;. Each element should cover
+<P>Dla u³atwienia oceniania praca powinna zawieraæ sensown± liczbê &quot;elementów oceny&quot;. Each element should cover
 	a particular aspect of the assignment. Typically an assignment will have
 	something between 5 to 15 elements for comments and grading, the 
 	actual number depending on the size and complexity of the assignment. A peer 
