--- a/lang/fr/help/index.html
+++ b/lang/fr/help/index.html
@@ -35,11 +35,11 @@
 <ul>
   <li><a href="help.php?file=questions.html">Poser de bonnes questions</a> 
   <li><a href="help.php?file=reading.html">Conseils de lecture</a> 
-  <li><a href="help.php?file=writing.html">&Eacute;criture</a> 
-  <li><a href="help.php?file=textformat.html">Formatage du texte</a> 
-  <li><a href="help.php?file=html.html">&Eacute;diter un document en format HTML</a> 
-  <li><a href="help.php?file=text.html">&Eacute;diter un document en format texte</a> 
-  <li><a href="help.php?file=wiki.html">&Eacute;diter un document en format Wiki</a> 
-  <li><a href="help.php?file=richtext.html">Utiliser l'&eacute;diteur de textes HTML</a> 
+  <li><a href="help.php?file=writing.html">R&eacute;daction d'un texte</a> 
+  <li><a href="help.php?file=textformat.html">Formatage d'un texte</a> 
+  <li><a href="help.php?file=html.html">Format HTML dans Moodle</a> 
+  <li><a href="help.php?file=text.html">Format texte</a> 
+  <li><a href="help.php?file=wiki.html">Format Wiki</a> 
+  <li><a href="help.php?file=richtext.html">L'&eacute;diteur WYSIWYG int&eacute;gr&eacute;</a> 
   <li><a href="help.php?file=emoticons.html">Utiliser les binettes</a> 
 </ul>
