--- a/lang/fr/help/forum/mods.html
+++ b/lang/fr/help/forum/mods.html
@@ -1,21 +1,22 @@
-<p><img valign=absmiddle src="<?php echo
-$cfg->wwwroot?>/mod/forum/icon.gif">&nbsp;<b>Forums</b></p>
-
-<p>Le forum est un des modules les plus importants de Moodle !
-Les forums sont un lieu où présenter des idées et en discuter
-avec tous les participants au cours. En interagissant, les
-étudiants construisent ensemble leurs savoirs.</p>
-
-<p>Voici quelques-unes des caractéristiques des forums :</p>
+<p><img valign=absmiddle src="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<b>Forums</b></p>
 
 <ul>
-<li>Ils peuvent permettre ou non l'ajout de nouvelles discussions ou de
-réponses.</li>
-<li>On peut joindre un fichier en annexe aux messages dans les forums.</li>
-<li>Les étudiants peuvent évaluer les messages publiés dans les forums.</li>
-<li>Les forums peuvent être lus dans différents formats d'affichage.</li>
-<li>Les participants peuvent décider de recevoir par courriel tous les messages
-d'un forum.</li>
-<li>Le professeur peut imposer aux étudiants la réception par courriel de tous
-les courriels.</li>
+	<p>Le forum est un des modules les plus importants de Moodle&nbsp;!
+	Les forums sont un lieu o&ugrave; pr&eacute;senter des id&eacute;es et en discuter
+	avec tous les participants au cours. En interagissant, les
+	&eacute;tudiants construisent ensemble leurs savoirs.</p>
+
+	<p>Voici quelques-unes des caract&eacute;ristiques des forums&nbsp;:</p>
+
+	<ul></li>
+	<li>Ils peuvent permettre ou non l'ajout de nouvelles discussions ou de
+	r&eacute;ponses.</li>
+	<li>On peut joindre un fichier en annexe aux messages dans les forums.</li>
+	<li>Les &eacute;tudiants peuvent &eacute;valuer les messages publi&eacute;s dans les forums.</li>
+	<li>Les forums peuvent &ecirc;tre lus dans diff&eacute;rents formats d'affichage.</li>
+	<li>Les participants peuvent d&eacute;cider de recevoir par courriel tous les messages
+	d'un forum.</li>
+	<li>Le professeur peut imposer aux &eacute;tudiants la r&eacute;ception par courriel de tous
+	les courriels.</li>
+	</ul>
 </ul>
