--- a/lang/fr/help/survey/mods.html
+++ b/lang/fr/help/survey/mods.html
@@ -1,5 +1,4 @@
-<p><img valign="absmiddle" src="<?php echo
-$cfg->wwwroot?>/mod/survey/icon.gif">&nbsp;<b>Questionnaires</b></p>
+<p><img valign="absmiddle" src="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<b>Questionnaires</b></p>
 
 <ul>
 <p>Le module des questionnaires d'&eacute;valuation pour
