--- a/lang/fr/help/journal/mods.html
+++ b/lang/fr/help/journal/mods.html
@@ -1,5 +1,6 @@
-<p><img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/journal/icon.gif">&nbsp;<b>Journal</b></p>
+<p><img valign=absmiddle src="<?php echo $CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<b>Journal</b></p>
 
+<ul>
 <p>Ce module est une activit&eacute; favorisant la r&eacute;flexion personnelle.</p>
 
 <p>Le professeur demande &agrave; l'&eacute;tudiant de r&eacute;fl&eacute;chir &agrave; un sujet
@@ -12,3 +13,4 @@ l'&eacute;tudiant.</p>
 
 <p>Dans les cours o&ugrave; cette activit&eacute; est possible, on sugg&egrave;re de
 lancer une activit&eacute; de journal par semaine.</p>
+</ul>
