--- a/lang/fr/help/mods.html
+++ b/lang/fr/help/mods.html
@@ -1,5 +1,5 @@
 <p align="center"><b>Modules d'activit&eacute;s</b></p>
 
-<p>Moodle propose un &eacute;ventail de modules d'activit&eacute; qui peuvent
+<p>Moodle propose un &eacute;ventail de modules d'activit&eacute;s qui peuvent
 &ecirc;tre utilis&eacute;s pour construire n'importe quel type de cours.</p>
 
