--- a/lang/fr/help/quiz/mods.html
+++ b/lang/fr/help/quiz/mods.html
@@ -1,4 +1,4 @@
-<p><img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/quiz/icon.gif">&nbsp;<b>Tests</b></p>
+<p><img valign=absmiddle src="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<b>Tests</b></p>
 
 <ul>
 <p>Ce module permet au professeur de concevoir et d'inclure des
