--- a/lang/fr/help/resource/mods.html
+++ b/lang/fr/help/resource/mods.html
@@ -1,11 +1,12 @@
-<p><img valign=absmiddle src="<?php echo
-$cfg->wwwroot?>/mod/resource/icon.gif">&nbsp;<b>Ressources</b></p>
+<p><img valign=absmiddle src="<?php echo $CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<b>Ressources</b></p>
 
+<ul> 
 <p>Les ressources sont des informations que l'enseignant propose aux &eacute;tudiants
-dans le cadre de son cours. Ces ressources peuvent &ecirc;tre : </p>
+dans le cadre de son cours. Ces ressources peuvent &ecirc;tre&nbsp;:</p>
 <ul> 
 <li>des fichiers envoy&eacute;s sur le serveur Moodle&nbsp;;
 <li>des pages &eacute;dit&eacute;es directement dans Moodle&nbsp;;
 <li>ou encore des pages web externes qui font alors partie du cours.
+</ul>
 </ul>
 
