--- a/lang/fr/help/workshop/mods.html
+++ b/lang/fr/help/workshop/mods.html
@@ -1,24 +1,14 @@
-<p><img valign=absmiddle src="<?php echo
-$cfg->wwwroot?>/mod/workshop/icon.gif">&nbsp;<b>Atelier</b></p>
-
+<p><img valign=absmiddle src="<?php echo $CFG->wwwroot?>/mod/workshop/icon.gif">&nbsp;<b>Atelier</b></p>
 <ul>
 <p>Un atelier est une activit&eacute; d'&eacute;valuation par les
 pairs avec beaucoup d'options. Il permet &agrave; chaque
 &eacute;tudiant d'&eacute;valuer les travaux des autres
-&eacute;tudiants ou d'&eacute;valuer des exemples de travaux
-fournis par l'enseignant, en utilisant diff&eacute;rentes
-strat&eacute;gies d'&eacute;valuation. La gestion des travaux
-remis est automatique&nbsp;: collecte des travaux des
-&eacute;tudiants, distribution des travaux aux &eacute;tudiants
-pour &eacute;valuation, affichage des r&eacute;sultats, etc. Le
-module Atelier a &eacute;t&eacute; d&eacute;velopp&eacute; et mis
-&agrave; disposition par Ray Kingdon.</p>
+&eacute;tudiants ou d'&eacute;valuer des exemples de travaux fournis
+par l'enseignant, en utilisant diff&eacute;rentes strat&eacute;gies
+d'&eacute;valuation. La gestion des travaux remis est
+automatique&nbsp;: collecte des travaux des &eacute;tudiants,
+distribution des travaux aux &eacute;tudiants pour &eacute;valuation,
+affichage des r&eacute;sultats, etc. Le module Atelier a
+&eacute;t&eacute; d&eacute;velopp&eacute; et mis &agrave; disposition
+par Ray Kingdon.</p>
 </ul>
-
-
-
-
-
-
-
-
