Changed classificaties to beoordeling Changed the translated Connected and Separate Knowing back to the English terms (as in the helpfiles)

--- a/lang/nl/help/forum/index.html
+++ b/lang/nl/help/forum/index.html
@@ -1,7 +1,7 @@
 <p>Forum module</p>
 <ul>
+<li><a href="help.php?module=forum&file=ratings.html">Beoordelingen</a>
 <li><a href="help.php?module=forum&file=attachment.html">Bijlage</a>
-<li><a href="help.php?module=forum&file=ratings.html">Classificaties</a>
 <li><a href="help.php?module=forum&file=forumtype.html">Forum type</a> 
 <li><a href="help.php?module=forum&file=subscription.html">Lidmaatschap</a>
 <li><a href="help.php?module=forum&file=maxattachmentsize.html">Maximum groote van de bijlage</a> 
