--- a/lang/nl/help/forum/ratings.html
+++ b/lang/nl/help/forum/ratings.html
@@ -14,7 +14,7 @@ Heb je opgemerkt dat in deze voorbeelden de separate knower een man is en de con
 
 Voor een efficiënt samenwerkende groep leerlingen is het best dat iedereen beide methodes van leren kan gebruiken.
 
-In sommige situaties, zoals op een online forum, kan één enkel bericht van een persoon, één of zelfs beide kenmerken laten zien. Iemand die gewoonlijk erg connected is, kan een bijdrage posten die erg separate klinkt, en omgekeerd. Het doel van het classificeren van elke bijdrage op deze schaal is om: 
+In sommige situaties, zoals op een online forum, kan één enkel bericht van een persoon, één of zelfs beide kenmerken laten zien. Iemand die gewoonlijk erg connected is, kan een bijdrage posten die erg separate klinkt, en omgekeerd. Het doel van elke bijdrage te plaatsen op deze schaal is om: 
 
 <blockquote>
 a) je te helpen nadenken over deze dingen als je de bijdrage van iemand leest.<br>
