--- a/lang/nl/help/forum/mods.html
+++ b/lang/nl/help/forum/mods.html
@@ -2,5 +2,5 @@
 <UL>
 <P>Dit kan de belangrijke activiteit van je vak zijn - hier worden de meeste discussies gevoerd. 
 Forums kunnen op verschillende manieren gestructureerd worden en leerlingen kunnen eventueel berichten 
-van elkaar classificeren. De berichten kunnen op verschillende manieren bekeken worden en het is 
+van elkaar beoordelen. De berichten kunnen op verschillende manieren bekeken worden en het is 
 mogelijk om bijlagen bij de berichten te voegen. Als leerlingen lid zijn van het forum, dan krijgen zij kopieën van nieuwe berichten per e-mail. Als leraren dat willen kunnen zij iederen verplichten lid te zijn.</UL>
