Typos corrected (Thanks JF Nadeau)

--- a/lang/fr/help/glossary/linkcategory.html
+++ b/lang/fr/help/glossary/linkcategory.html
@@ -3,6 +3,6 @@
 <p>Vous pouvez indiquer si vous voulez lier automatiquement ou non les
 cat&eacute;gories.</p>
 
-<p>Attention&nbsp;! les cat&eacute;gories ne sont li&eacute;es que
+<p>Attention&nbsp;! Les cat&eacute;gories ne sont li&eacute;es que
 lorsque le texte correspond totalement (casse des caract&egrave;res et
 mot pour mot).</p>
