--- a/lang/fr/help/glossary/mainglossary.html
+++ b/lang/fr/help/glossary/mainglossary.html
@@ -1,12 +1,12 @@
 <p align="center"><b>D&eacute;finir le glossaire principal d'un
 cours</b></p>
 
-<p>Le module glossaire permet d'exporter des entr&eacute;es de
-n'importe quel glossaire secondaire vers le glossaire principla d'un
+<p>Le module Glossaire permet d'exporter des entr&eacute;es de
+n'importe quel glossaire secondaire vers le glossaire principal d'un
 cours.</p>
 
 <p>Si vous d&eacute;sirez profiter de cette fonctionnalit&eacute;,
 vous devez indiquer quel est le glossaire principal.</p>
 
-<p>Attention&nbsp;! il ne peut y avoir qu'un seul glossaire principal
+<p>Attention&nbsp;! Il ne peut y avoir qu'un seul glossaire principal
 par cours et seuls les enseignants peuvent le modifier.</p>
