--- a/lang/fr/help/glossary/mods.html
+++ b/lang/fr/help/glossary/mods.html
@@ -14,7 +14,7 @@ entr&eacute;es d'un glossaire &agrave; un autre (le glossaire
 principal) &agrave; l'int&eacute;rieur d'un cours.</p>
 
 <p>En outre, le glossaire peut &eacute;galement cr&eacute;er
-automatiquement dans tout le cours des liens vers entr&eacute;es des
+automatiquement dans tout le cours des liens vers les entr&eacute;es des
 glossaires.</p>
 
 </ul>
