--- a/lang/fr/help/glossary/studentcanpost.html
+++ b/lang/fr/help/glossary/studentcanpost.html
@@ -1,7 +1,7 @@
 <p align="center"><b>Permettre aux &eacute;tudiants d'ajouter des
 entr&eacute;es</b></p>
 
-<p>vous pouvez choisir de permettre ou non aux &eacute;tudiants
+<p>Vous pouvez choisir de permettre ou non aux &eacute;tudiants
 d'ajouter, de modifier et de supprimer ses propres entr&eacute;es. Les
 entr&eacute;es export&eacute;es dans le glossaire principal ne peuvent
 &ecirc;tre modifi&eacute;es ou supprim&eacute;es que par les
