--- a/lang/fr/help/glossary/usedynalink.html
+++ b/lang/fr/help/glossary/usedynalink.html
@@ -1,7 +1,7 @@
 <p align="center"><b>Liaison automatique des entr&eacute;es</b></p>
 
-<p>Une fois cette fonctionnalit&eacute; activ&eacute;e, les concept ou
-expressions d&eacute;finies dans ce glossaire seront li&eacute;es
+<p>Une fois cette fonctionnalit&eacute; activ&eacute;e, les concepts ou
+expressions d&eacute;finis dans ce glossaire seront li&eacute;s
 automatiquement chaque fois qu'ils appara&icirc;tront dans les textes
 du m&ecirc;me cours, y compris dans les messages des forums, les
 ressources internes, les r&eacute;sum&eacute;s hebdomadaires ou
