Latest from Jean!

--- a/lang/fr_ca/help/assignment/index.html
+++ b/lang/fr_ca/help/assignment/index.html
@@ -1,5 +1,5 @@
-<p>Assignments</p>
+<p>Devoirs</p>
 <ul>
-  <li><a href="help.php?module=assignment&file=assignmenttype.html">Assignment type</a> 
-  <li><a href="help.php?module=assignment&file=resubmit.html">Re-submit</a> 
+  <li><a href="help.php?module=assignment&file=assignmenttype.html">Types de devoirs</a> 
+  <li><a href="help.php?module=assignment&file=resubmit.html">Soumettre une nouvelle version du devoir</a> 
 </ul>
