--- a/lang/fr_ca/help/choice/options.html
+++ b/lang/fr_ca/help/choice/options.html
@@ -1,7 +1,7 @@
-<P ALIGN=CENTER><B>Choice options</B></P>
+<P ALIGN=CENTER><B>Options</B></P>
 
-<P>Here is where you specify the options that participants 
-   have to choose from.
+<P>C'est ici que vous spécifiez les options parmi lesquelles
+les participants devront choisir. </p>
 
-<P>You can fill in any number of these: it's OK to leave some blank 
-   if you don't need the full 6 options.
+<P>Vous pouvez compléter le nombre d'options désiré : vous n'êtes pas obliger de
+toutes les remplir.</p>
