--- a/lang/fr_ca/help/forum/ratings.html
+++ b/lang/fr_ca/help/forum/ratings.html
@@ -1,3 +1,8 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+</head>
+<body>
 <div style="text-align: center;"><span style="font-weight: bold;">&Eacute;valuation
 des attitudes objectives et empathiques dans les messages des forums</span><br>
 </div>
@@ -98,3 +103,5 @@ of knowing as learning styles: Learning MAGIC with a partner. Sex
 Roles, 44(7/8), 419-436. <br>
   </li>
 </ul>
+</body>
+</html>
