--- a/lang/fr_ca/help/index.html
+++ b/lang/fr_ca/help/index.html
@@ -9,6 +9,7 @@
 <p>Administration</p>
 <ul>
   <li><a href="help.php?file=langedit.html">Édition de la langue</a> 
+   <li><a href="help.php?file=uploadusers.html">Téléchargement d'une liste d'utilisateurs</a> 
 </ul>
 
 <p>Concevoir un cours</p>
