--- a/lang/fr_ca/help/quiz/index.html
+++ b/lang/fr_ca/help/quiz/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<h3>Tests</h3>
+<p>Tests</p>
 <ul>
   <li><a href="help.php?module=quiz&amp;file=review.html">Permettre la
 r&eacute;vision d'un test apr&egrave;s qu'il a &eacute;t&eacute;
