--- a/lang/fr_ca/help/quiz/multianswer.html
+++ b/lang/fr_ca/help/quiz/multianswer.html
@@ -76,8 +76,9 @@ une question qui demande une r&eacute;ponse num&eacute;rique avec point
 d&eacute;cimal <input size="8" type="text" value="" name="q4ma3"> .<br>
               <br>
 Notez que les adresses URL comme <a target="newpage"
- href="http://www.moodle.org">www.moodle.org</a> et les binettes  <img border="0" src="pix/s/smiley.gif" width="15" height="15">
- sont correctement interpr&eacute;t&eacute;es:<br>
+ href="http://www.moodle.org">www.moodle.org</a> et les binettes <img
+ src="http://server.dougiamas.net/moodle/pix/s/smiley.gif" height="15"
+ width="15" alt=":-)"> sont correctement interpr&eacute;t&eacute;es:<br>
 a) Est-ce bien?
               <select name="q4ma4">
               <option></option>
